# crates-rust

./: .gitignore
axum/: README.MD
json_parsing_example/: Cargo.toml  README.MD
json_parsing_example/src/: main.rs
rust-axum/: Cargo.toml  README.MD
rust-axum/.cargo/: config.toml
rust-axum/examples/: gen_key.rs  quick_dev.rs
rust-axum/migration/dev_initial/: 01-create-schema.sql
rust-axum/src/: config.rs  error.rs  main.rs
rust-axum/src/_dev_utils/: dev_db.rs  mod.rs
rust-axum/src/crypt/: error.rs  mod.rs  pwd.rs
rust-axum/src/ctx/: mod.rs
rust-axum/src/log/: mod.rs
rust-axum/src/model/: base.rs  error.rs  mod.rs  task.rs  user.rs
rust-axum/src/model/store/: error.rs  mod.rs
rust-axum/src/web/: error.rs  mod.rs  mw_auth.rs  mw_res_map.rs  routes_login.rs  routes_tickets.rs
rust-axum/src/web/rpc/: mod.rs  task_rpc.rs
sqlx-mysql-todos/: Cargo.toml  README.MD
sqlx-mysql-todos/migrations/: 20240306_todos.sql
sqlx-mysql-todos/src/: main.rs
web-server/: 404.html  README.MD  hello.html
web-server/src/: lib.rs  main.rs
