[package]
name = "sqlx-mysql-todos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
futures = "0.3"
sqlx = {version = "0.7.3", features = ["mysql", "runtime-tokio-native-tls"]}
structopt = "0.3"
tokio = {version = "1", features = ["full"]}
dotenv = "0.15.0"